--- a/src/index.html
+++ b/src/index.html
@@ -611,6 +611,87 @@
         </div>
       </section>
 
+      <section class="faq">
+
+        <div class="container">
+
+          <div class="info">
+            <span>f.a.q</span>
+            
+            <h2 class="title">f.a.q</h2>
+  
+            <p class="desc">
+              Frequently Asked Questions
+            </p>
+  
+          </div>
+
+          
+          <ul>
+          <li>
+            <h4>Non consectetur a erat nam at lectus urna duis?</h4>
+            <p>
+              Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
+              volutpat lacus laoreet non curabitur gravida. Venenatis lectus
+              magna fringilla urna porttitor rhoncus dolor purus non.
+            </p>
+          </li>
+
+          <li>
+            <h4>Feugiat scelerisque varius morbi enim nunc?</h4>
+            <p>
+              Dolor sit amet consectetur adipiscing elit pellentesque habitant
+              morbi. Id interdum velit laoreet id donec ultrices. Fringilla
+              phasellus faucibus scelerisque eleifend donec pretium. Est
+              pellentesque elit ullamcorper dignissim. Mauris ultrices eros in
+              cursus turpis massa tincidunt dui.
+            </p>
+          </li>
+
+          <li>
+            <h4>Dolor sit amet consectetur adipiscing elit?</h4>
+            <p>
+              Eleifend mi in nulla posuere sollicitudin aliquam ultrices
+              sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla
+              pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque
+              eu tincidunt. Lectus urna duis convallis convallis tellus. Urna
+              molestie at elementum eu facilisis sed odio morbi quis
+            </p>
+          </li>
+
+          <li>
+            <h4>
+              Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+            </h4>
+
+            <p>
+              Molestie a iaculis at erat pellentesque adipiscing commodo.
+              Dignissim suspendisse in est ante in. Nunc vel risus commodo
+              viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
+              bibendum est. Purus gravida quis blandit turpis cursus in.
+            </p>
+          </li>
+
+          <li>
+            <h4>
+              Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis
+              nunc eget lorem dolor?
+            </h4>
+
+            <p>
+              Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris
+              vitae ultricies leo integer malesuada nunc vel. Tincidunt eget
+              nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut
+              venenatis tellus in metus vulputate eu scelerisque.
+            </p>
+          </li>
+        </ul>
+
+
+        </div>
+
+      </section>
+
     </div>
   </body>
 </html>
